2024-09-22  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-reminder.el (howm-simulate-todo-mode):
	disable unused action-lock-mode in howm-simulate-todo

	* action-lock.el (action-lock-mode): fix typo in docstring

2024-09-21  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-view.el (howm-view-summary-mode, howm-view-contents-mode):
	fix unintended "M-x ..." in describe-mode

2024-09-20  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* riffle.el: fix broken back-scrolling by BS key in terminals

	* howm-menu.el: ditto

2024-09-19  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* riffle.el: remove obsolete C-h binding

	* howm-menu.el: ditto

	* howm-misc.el
	(howm-set-lang): sample/bug-report.txt is UTF-8 now
	(howm-setup-change-log): avoid Japanese comment

	* howm-misc.el (howm-setup-change-log): avoid obsolete find-if

	* README.md: add screenshot by @jabirali
	thx > Jabir Ali Ouassou san (jabir.ali.ouassou at hvl.no)
	https://github.com/kaorahi/howm/issues/13#issuecomment-2358456865

2024-09-07  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* README.md: comment out Emacs Elements channel as it seems unavailable

	* README.md: add "quick start" section
	thx > Jabir Ali Ouassou san (jabir.ali.ouassou at hvl.no)
	https://github.com/kaorahi/howm/pull/8

2024-02-29  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-reminder.el: fix & improve howm-simulate-todo

	* howm-view.el (howm-view-summary-mode-body): ditto.

2024-02-21  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-reminder.el (howm-simulate-todo):
	implement simulation of todo list for a specific date
	https://github.com/kaorahi/howm/issues/4

	* howm-view.el (howm-view-summary-mode):
	modify mode line for the above simulation

2024-02-21  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-reminder.el (howm-todo-menu, howm-reminder-menu):
	never omit near-term schedules in menu even with too many overdue deadlines.
	show %tnum entries for %reminder in menu even with too many schedules.
